--- a/app/src/main/res/layout/item_tab.xml
+++ b/app/src/main/res/layout/item_tab.xml
@@ -24,6 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/half_padding"
             android:textSize="16sp"
+            android:textColor="@color/white"
             tools:text="目录" />
     </LinearLayout>
 
