Swipe back with api 17 to 21 support

--- a/app/src/main/res/layout/activity_market.xml
+++ b/app/src/main/res/layout/activity_market.xml
@@ -69,9 +69,11 @@
             android:layout_width="match_parent"
             android:layout_height="44dp"
             android:background="@color/colorPrimary"
+            android:paddingLeft="@dimen/half_padding"
+            android:paddingRight="@dimen/half_padding"
             app:tabBackground="@color/transparent"
             app:tabIndicatorColor="@color/white"
-            app:tabIndicatorHeight="2dp"
+            app:tabIndicatorHeight="3dp"
             app:tabMode="scrollable"
             app:tabSelectedTextColor="@color/white"
             app:tabTextColor="@color/white"
