--- a/app/src/main/res/layout/view_collection_index.xml
+++ b/app/src/main/res/layout/view_collection_index.xml
@@ -7,7 +7,7 @@
     android:background="@color/bgcolor"
     android:orientation="horizontal">
 
-    <com.wuxiaolong.pullloadmorerecyclerview.PullLoadMoreRecyclerView
+    <ml.puredark.hviewer.ui.customs.MyPullLoadMoreRecyclerView
         android:id="@+id/rv_index"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
