Swipe back final solotion

--- a/app/src/main/res/layout/activity_add_site.xml
+++ b/app/src/main/res/layout/activity_add_site.xml
@@ -16,7 +16,8 @@
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
+            android:theme="@style/AppTheme.AppBarOverlay"
+            app:elevation="0dp">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
