--- a/app/src/main/res/layout/activity_download_list.xml
+++ b/app/src/main/res/layout/activity_download_list.xml
@@ -58,15 +58,15 @@
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="44dp"
-            android:background="@color/white"
+            android:background="@color/colorPrimary"
             app:tabBackground="@color/transparent"
-            app:tabIcon1="@drawable/selector_download_primary"
+            app:tabIcon1="@drawable/selector_download"
             app:tabIcon2="@drawable/selector_folder_image"
-            app:tabIndicatorColor="@color/colorPrimary"
-            app:tabIndicatorHeight="2dp"
+            app:tabIndicatorColor="@color/white"
+            app:tabIndicatorHeight="3dp"
             app:tabMode="fixed"
-            app:tabSelectedTextColor="@color/colorPrimaryDark"
-            app:tabTextColor="@color/colorPrimaryDark"
+            app:tabSelectedTextColor="@color/white"
+            app:tabTextColor="@color/white"
             app:tabTitleArray="当前任务,已完成" />
 
         <ml.puredark.hviewer.ui.customs.ExViewPager
