fix cache size setting; new download naming

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -21,6 +21,12 @@
             android:summary=" %s 页"
             android:title="@string/settings_view_preload_pages" />
 
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="pref_view_volume_flick"
+            android:title="@string/settings_view_volume_flick"
+            android:summary="@string/settings_view_volume_flick_summary"/>
+
     </PreferenceCategory>
 
     <PreferenceCategory
