--- a/app/src/main/res/layout/activity_download_list.xml
+++ b/app/src/main/res/layout/activity_download_list.xml
@@ -65,8 +65,7 @@
             app:tabIndicatorColor="@color/white"
             app:tabIndicatorHeight="3dp"
             app:tabMode="fixed"
-            app:tabSelectedTextColor="@color/white"
-            app:tabTextColor="@color/white"
+            app:tabMyTextColor="@color/white"
             app:tabTitleArray="当前任务,已完成" />
 
         <ml.puredark.hviewer.ui.customs.ExViewPager
