--- a/app/src/main/res/layout/activity_picture_viewer.xml
+++ b/app/src/main/res/layout/activity_picture_viewer.xml
@@ -12,20 +12,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:background="@color/black_90"
         android:fitsSystemWindows="false">
 
         <ml.puredark.hviewer.ui.customs.MultiTouchViewPager
             android:id="@+id/view_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/black_90"
+            tools:visibility="visible"
             android:fitsSystemWindows="false" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_picture"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:visibility="gone"
+            app:layoutManager="LinearLayoutManager"
+            tools:listitem="@layout/item_picture_viewer"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:background="@color/black_10"
+            android:background="@color/black_40"
             android:gravity="center_vertical"
             android:minHeight="50dp"
             android:orientation="horizontal"
