--- a/app/src/main/res/layout/item_site.xml
+++ b/app/src/main/res/layout/item_site.xml
@@ -18,7 +18,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/item_site_height"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:gravity="center_vertical">
 
         <ImageView
@@ -27,7 +26,7 @@
             android:layout_height="32dp"
             android:layout_marginTop="@dimen/half_padding"
             android:layout_marginBottom="@dimen/half_padding"
-            android:layout_marginLeft="@dimen/uni_padding"
+            android:layout_marginLeft="32dp"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:scaleType="centerInside"
             tools:src="@drawable/ic_filter_1_black" />
