--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,10 +13,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="start" />
-    <include
-        layout="@layout/nav_categories"
+
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="end" />
+        android:layout_gravity="end" >
+        <include
+            layout="@layout/nav_categories"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"/>
+        <include
+            layout="@layout/nav_tags"
+            android:visibility="visible"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"/>
+    </RelativeLayout>
 
 </android.support.v4.widget.DrawerLayout>
