--- a/app/src/main/res/layout/view_collection_desciption.xml
+++ b/app/src/main/res/layout/view_collection_desciption.xml
@@ -69,7 +69,7 @@
                     app:layoutManager="StaggeredGridLayoutManager"
                     app:layout_behavior="@string/appbar_scrolling_view_behavior"
                     app:spanCount="2"
-                    tools:listitem="@layout/item_tag" />
+                    tools:listitem="@layout/item_collection_tag" />
             </LinearLayout>
 
         </LinearLayout>
