--- a/app/src/main/res/layout/item_site_tag.xml
+++ b/app/src/main/res/layout/item_site_tag.xml
@@ -1,26 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    android:gravity="center"
-    android:elevation="1dp"
-    app:contentPadding="8dp"
-    app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="2dp"
-    app:cardElevation="1dp"
-    app:cardPreventCornerOverlap="false"
-    app:cardUseCompatPadding="false">
-
-    <TextView
-        android:id="@+id/tv_tag"
+    android:layout_height="wrap_content">
+    <android.support.v7.widget.CardView
+        android:id="@+id/container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAllCaps="true"
-        android:textColor="@color/black"
-        android:textSize="13sp"
-        tools:text="males only" />
+        android:layout_margin="4dp"
+        android:gravity="center"
+        android:elevation="2dp"
+        app:contentPadding="4dp"
+        app:cardBackgroundColor="@color/darkgray"
+        app:cardCornerRadius="2dp"
+        app:cardElevation="2dp"
+        app:cardPreventCornerOverlap="false"
+        app:cardUseCompatPadding="false">
 
-</android.support.v7.widget.CardView>
+        <TextView
+            android:id="@+id/tv_tag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="13sp"
+            tools:text="males only" />
+
+    </android.support.v7.widget.CardView>
+</LinearLayout>
