--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -36,6 +36,12 @@
             android:title="@string/settings_view_volume_flick"
             android:summary="@string/settings_view_volume_flick_summary"/>
 
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="pref_view_one_pic_gallery"
+            android:title="@string/settings_view_open_one_pic_gallery"
+            android:summary="@string/settings_view_open_one_pic_gallery_summary"/>
+
     </PreferenceCategory>
 
     <PreferenceCategory
