--- a/app/src/main/res/layout/nav_categories.xml
+++ b/app/src/main/res/layout/nav_categories.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:minWidth="80dp"
     android:background="@color/white"
@@ -35,9 +35,8 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_category"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:maxWidth="140dp"
         android:orientation="vertical"
         android:paddingTop="20dp"
         android:paddingBottom="20dp"
