--- a/app/src/main/res/layout/view_site_details.xml
+++ b/app/src/main/res/layout/view_site_details.xml
@@ -64,6 +64,54 @@
             app:met_clearButton="true"
             app:met_floatingLabelText="COOKIE（可选）"/>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:id="@+id/btn_waterfall_as_list"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+                <com.gc.materialdesign.views.CheckBox
+                    android:id="@+id/checkbox_waterfall_as_list"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimary"
+                    app:check="false" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="14sp"
+                    android:text="瀑布流代替列表"/>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/btn_waterfall_as_grid"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+                <com.gc.materialdesign.views.CheckBox
+                    android:id="@+id/checkbox_waterfall_as_grid"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimary"
+                    app:check="false" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="14sp"
+                    android:text="瀑布流代替宫格"/>
+            </LinearLayout>
+        </LinearLayout>
+
         <TextView
             android:id="@+id/btn_category"
             android:layout_width="wrap_content"
