option to set waterfall layout for each site; tweaks ; pinterest supported; Updated to v0.7.5

--- a/app/src/main/res/layout/item_collection_waterfall.xml
+++ b/app/src/main/res/layout/item_collection_waterfall.xml
@@ -83,6 +83,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="right"
                     android:orientation="horizontal">
 
                     <TextView
@@ -107,6 +108,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
+                android:gravity="right"
                 android:background="@color/waterfall_bgcolor">
 
                 <LinearLayout
