--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ml.puredark.hviewer.ui.customs.DragMarginDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
@@ -25,4 +25,4 @@
         android:clickable="true"
         android:layout_gravity="end" />
 
-</android.support.v4.widget.DrawerLayout>
+</ml.puredark.hviewer.ui.customs.DragMarginDrawerLayout>
