--- a/app/src/main/res/layout/fragment_collection.xml
+++ b/app/src/main/res/layout/fragment_collection.xml
@@ -10,7 +10,8 @@
     <ml.puredark.hviewer.ui.customs.MyPullLoadMoreRecyclerView
         android:id="@+id/rv_collection"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:orientation="vertical"
         android:scrollbars="vertical"
         app:layoutManager="LinearLayoutManager"
